# girg_generator

./: .gitignore  Cargo.toml  builder.Dockerfile  builder.sh  process_benchmark.py  tfdegrees.sh
cpu_generator/: Cargo.toml  README.md
cpu_generator/benches/: genperf.rs
cpu_generator/src/: blocks.rs  lib.rs  random.rs  threads.rs
docs/: build.md
fixed-size-buffer/: Cargo.toml
fixed-size-buffer/src/: lib.rs
generator/common/: Cargo.toml
generator/common/src/: algorithm.rs  generator.rs  lib.rs  memory.rs  params.rs  random.rs  threads.rs  tiles.rs
generator/common/src/params/: ext.rs  mod.rs
generator/common/src/random/: mod.rs  murmur3.rs
generator/core/: Cargo.toml
generator/core/src/: algorithm.rs  lib.rs  memory.rs  params.rs  tiles.rs
generator/core/src/random/: mod.rs  murmur3.rs
generator/cpu/: Cargo.toml  README.md
generator/cpu/src/: lib.rs
generator/gpu/: Cargo.toml  build.rs
generator/gpu/kernel/: Cargo.toml
generator/gpu/kernel/src/: kernels.rs  lib.rs
generator/gpu/kernel/src/state/: cpu.rs  gpu.rs  mod.rs
generator/gpu/src/: cudaext.rs  lib.rs
generator/gpu/src/state/: cpu.rs
generator_common/src/: generator.rs  lib.rs  params.rs  threads.rs  tiles.rs
generator_common/src/random/: mod.rs  murmur3.rs
girg_generator/: Cargo.toml
girg_generator/benches/: cpu_core_scaling.rs  cpu_size_scaling.rs  cpu_tile_scaling.rs  gpu_core_scaling.rs  gpu_size_scaling.rs  gpu_tile_scaling.rs  scaling.rs
girg_generator/src/: args.rs  benchmark.rs  lib.rs  main.rs  parquet_edges.rs  pbar.rs
girg_generator/src/tests/: mod.rs
gpu_generator/: Cargo.toml  build.rs
gpu_generator/src/: lib.rs
gpu_kernel/: Cargo.toml
gpu_kernel/src/: kernels.rs  lib.rs
gpu_kernel/src/state/: cpu.rs  gpu.rs  mod.rs
