[package]
name = "cpu_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

generator_common = { path = "../generator_common" }

crossbeam-channel = "0.5.1"
tracing = "0.1"
tracing-subscriber = "0.2.0"
anyhow = "1.0.51"

[dev-dependencies]
criterion = "0.3"
rstest = "0.12.0"
