[package]
name = "fixed-size-buffer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cuda_std = { version = "0.2" }
no-std-compat = "0.4"

[features]
default = [ "cpu" ]

std = []
gpu = ["cust", "std"]
cpu = ["std"]

# For cust::DeviceCopy
[target.'cfg(not(target_os = "cuda"))'.dependencies]
cust = {version = "0.3", optional = true}
