[package]
name = "girg_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cust = { version = "0.2" }
generator_common = { path = "../generator/common" }
generator_gpu = { path = "../generator/gpu" }
generator_cpu = { path = "../generator/cpu" }
crossbeam-channel = "0.5.1"
tracing = "0.1"
tracing-subscriber = "0.2.0"
clap = { version = "3.0.0-rc.4", features = ["derive"] }
anyhow = { version = "1", features = [ "backtrace" ] }

once_cell = "1.9.0"
indicatif = "0.16.2"

csv = "1.1.6"
parquet = "6.5.0"

num_cpus = { version = "1.13.1", optional = true }
criterion = { version = "0.3", optional = true }

[dev-dependencies]
mur3 = "0.1.0"
rstest = "0.12.0"

[features]

benchmark = [ "num_cpus", "criterion" ]
gpu = []

[[bench]]
name = "cpu_core_scaling"
harness = false
required-features = ["benchmark"]

[[bench]]
name = "gpu_core_scaling"
harness = false
required-features = ["benchmark", "gpu"]

[[bench]]
name = "cpu_size_scaling"
harness = false
required-features = ["benchmark"]

[[bench]]
name = "gpu_size_scaling"
harness = false
required-features = ["benchmark", "gpu"]

[[bench]]
name = "cpu_tile_scaling"
harness = false
required-features = ["benchmark"]

[[bench]]
name = "gpu_tile_scaling"
harness = false
required-features = ["benchmark", "gpu"]
