[package]
name = "girg_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generator-common = { path = "../generator/common" }
generator-gpu = { path = "../generator/gpu", optional = true }
generator-cpu = { path = "../generator/cpu" }
crossbeam-channel = "0.5.1"
tracing = "0.1"
tracing-subscriber = "0.2.0"
clap = { version = "3.0", features = ["derive"] }
anyhow = { version = "1", features = ["backtrace"] }
strum = { version = "0.23", features = ["derive"] }

once_cell = "1.9.0"
indicatif = "0.16.2"

csv = "1.1.6"
parquet = "6.5.0"

num_cpus = { version = "1.13.1", optional = true }
criterion = { version = "0.3", optional = true }

[dev-dependencies]
mur3 = "0.1.0"
rstest = "0.12.0"

[features]
default = ["gpu"]

benchmark = ["num_cpus", "criterion"]
gpu = [ "generator-gpu" ]

[[bench]]
name = "scaling"
harness = false
required-features = ["benchmark"]
