[package]
name = "gpu_kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cuda_std = { version = "0.2" }
generator_common = { path = "../generator_common" }

[target.'cfg(not(target_os = "cuda"))'.dependencies]
cust = { version = "0.2", features = ["vek"] }
derivative = "2.2.0"
num-integer = { version = "0.1.44", default-features = false }
rand = "0.8.4"
tracing = "0.1"

[target.'cfg(not(target_os = "cuda"))'.dev-dependencies]
rstest = "0.12.0"
mur3 = "0.1.0"
rand_xoshiro = "0.6.0"

[lib]
crate-type = ["cdylib", "rlib"]
