[package]
name = "generator-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
gpu = [ "generator-core/gpu" ]

[dependencies]
generator-core = { path = "../core" }
num-integer = { version = "0.1.44", default-features = false }
rand = "0.8.4"
tracing = "0.1"
crossbeam-channel = "0.5.1"
anyhow = { version = "1", features = [ "backtrace" ] }

[target.'cfg(not(target_os = "cuda"))'.dev-dependencies]
rstest = "0.12"
