[package]
name = "generator-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cuda_std = { version = "0.2" }
no-std-compat = "0.4"

[features]
gpu = ["cust"]

# For cust::DeviceCopy
[target.'cfg(not(target_os = "cuda"))'.dependencies]
cust = {version = "0.3", optional = true}

# Testing libs for murmur3
[target.'cfg(not(target_os = "cuda"))'.dev-dependencies]
rstest = "0.12"
mur3 = "0.1"
rand_xoshiro = "0.6"
rand = "0.8.4"
