[package]
name = "generator_cpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

generator_common = { path = "../common" }

crossbeam-channel = "0.5.1"
tracing = "0.1"
tracing-subscriber = "0.2.0"
anyhow = { version = "1", features = [ "backtrace" ] }

[dev-dependencies]
criterion = "0.3"
rstest = "0.12.0"
