[package]
name = "generator_gpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cust = { version = "0.2" }
generator_common = { path = "../common" }
generator_gpu_kernel = {path = "kernel" }
crossbeam-channel = "0.5.1"
tracing = "0.1"
tracing-subscriber = "0.2.0"
rand = "0.8.4"
clap = { version = "3.0.0-rc.4", features = ["derive"] }
anyhow = "1.0.51"
once_cell = "1.9.0"
num-integer = { version = "0.1.44", default-features = false }
indicatif = "0.16.2"
csv = "1.1.6"


[build-dependencies]
cuda_builder = { version = "0.2" }
