[package]
name = "generator-gpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cust = { version = "0.3" }
generator-common = { path = "../common", features = ["gpu"] }
fixed-size-buffer = { path = "../../fixed-size-buffer", features = ["gpu"] }
generator-gpu-kernel = { path = "kernel" }
crossbeam-channel = "0.5.1"
derivative = "2.2.0"
tracing = "0.1"
rand = "0.8.4"
anyhow = { version = "1", features = ["backtrace"] }
once_cell = "1.9.0"
num-integer = { version = "0.1.44", default-features = false }


[build-dependencies]
cuda_builder = { version = "0.3" }
