[package]
name = "generator-gpu-kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cuda_std = { version = "0.2" }
generator-core = { path = "../../core" }

[target.'cfg(not(target_os = "cuda"))'.dependencies]
cust = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]
